Adjusted site navigation; Fixed source tags on photo.html, now pictures are dowloading as they should; Made img alt take the same space as actual picture (if picture haven't been downloaded by user webpage layout will remain the same, no collapsing)

--- a/source/sass/blocks/_reviews.scss
+++ b/source/sass/blocks/_reviews.scss
@@ -360,8 +360,10 @@
   }
 
   .reviews__author-image {
+    width: 250px;
     min-width: 250px;
     height: 160px;
+
     border: 0;
     border-radius: 0;
   }
